[package]
name = "stdcheck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdcheck"
path = "src/main.rs"

[dependencies]
libakuma = { path = "../libakuma" }
# Note: ahash requires std by default, so we use default hashbrown which has no hasher
# We'll use the inline feature which provides DefaultHashBuilder for no_std
hashbrown = { version = "0.14", default-features = false, features = ["inline-more"] }

