[package]
name = "tar"
version = "0.1.0"
edition = "2021"

[dependencies]
libakuma = { path = "../libakuma" }
miniz_oxide = { version = "0.7", features = ["with-alloc"] }
crc32fast = { version = "1.3", default-features = false } # Directly adding crc32fast with no_std support
tar-no-std = { version = "0.4", default-features = false, features = ["alloc"] }
# clap removed due to no_std incompatibility
